--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,22 @@
 version: '3'
+
 services:
   server:
     build: .
-    ports:
-      - 127.0.0.1:3000:3000
     restart: unless-stopped
+    env_file: .env
+
+  https-portal:
+    image: steveltn/https-portal:1
+    ports:
+      - '80:80'
+      - '443:443'
+    restart: unless-stopped
+    links:
+      - server
+    volumes:
+      - ./https-portal/certs:/var/lib/https-portal
+    environment:
+      DOMAINS: >-
+        ${DEPLOY_DOMAIN} -> http://server
     env_file: .env
