--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,5 +18,5 @@ services:
       - ./https-portal/certs:/var/lib/https-portal
     environment:
       DOMAINS: >-
-        ${DEPLOY_DOMAIN} -> http://server
+        ${DEPLOY_DOMAIN} -> http://server:3000
     env_file: .env
