build: move next to root

--- a/package.json
+++ b/package.json
@@ -1,41 +1,26 @@
 {
   "name": "ldap-portal",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "build": "webpack --config ./webpack.config.build.js",
-    "watch": "webpack --config ./webpack.config.watch.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/preset-env": "^7.6.2",
-    "@babel/preset-react": "^7.0.0",
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "axios": "^0.21.1",
-    "babel-loader": "^8.0.6",
-    "babel-polyfill": "^6.26.0",
-    "body-parser": "^1.19.0",
-    "config": "^2.0.2",
-    "express": "^4.17.1",
-    "history": "^4.10.1",
-    "jsonwebtoken": "^8.5.1",
-    "ldapjs": "^1.0.2",
-    "log4js": "^3.0.6",
-    "pub": "^0.2.0",
-    "pug": "^3.0.2",
-    "react": "^16.10.0",
-    "react-dom": "^16.10.0",
-    "react-router-dom": "^4.3.1",
-    "shell-escape": "^0.2.0",
-    "smbhash": "0.0.1",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9"
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.5",
+    "@types/node": "20.3.1",
+    "@types/react": "18.2.13",
+    "@types/react-dom": "18.2.6",
+    "axios": "^1.4.0",
+    "eslint": "8.43.0",
+    "eslint-config-next": "13.4.7",
+    "next": "13.4.7",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "5.1.3"
   }
 }
