--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "axios": "^1.4.0",
+    "cookie": "^0.5.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "jsonwebtoken": "^9.0.0",
@@ -25,6 +26,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.1",
     "@types/jsonwebtoken": "^9.0.2"
   }
 }
