--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
     "@types/cookie": "^0.5.1",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/ldapjs": "^3.0.0"
+    "@types/ldapjs": "^3.0.0",
+    "@vitejs/plugin-react": "^4.0.1",
+    "vitest": "^0.32.2"
   }
 }
