--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/ldapjs": "^3.0.0",
     "@vitejs/plugin-react": "^4.0.1",
+    "jsdom": "^22.1.0",
     "vitest": "^0.32.2"
   }
 }
