--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "cookie": "^0.5.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
-    "jsonwebtoken": "^9.0.0",
+    "jose": "^4.14.4",
     "ldapjs": "^3.0.2",
     "next": "13.4.7",
     "react": "18.2.0",
