chore: add redis-related env vars

--- a/sample.env
+++ b/sample.env
@@ -5,3 +5,4 @@ PASSWORD=admincn_password
 DEPLOY_DOMAIN=ldap-portal.example.com
 ADMIN_CN=admin
 NODE_ENV=development|test|production
+REDIS_URL=redis://redis
