--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "redis": "^4.6.7",
     "typescript": "5.1.3"
   },
   "devDependencies": {
