--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.1.1",
+    "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.13.5",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
