chore: add default email domain to env

--- a/sample.env
+++ b/sample.env
@@ -4,5 +4,6 @@ SECRET=SECRETKEY
 PASSWORD=admincn_password
 DEPLOY_DOMAIN=ldap-portal.example.com
 ADMIN_CN=admin
+EMAIL_DOMAIN=example.com
 NODE_ENV=development|test|production
 REDIS_URL=redis://redis
