build: add volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     env_file: .env
     ports:
       - "3000:3000"
+    volumes:
+      - ".:/src"
 
   server:
     profiles:
@@ -38,7 +40,7 @@ services:
 
   # Redis にアカウント作成リクエストを保存する
   redis:
-    image: redis
+    image: redis/redis-stack:7.2.0-v4
     volumes:
       - "redis-data:/data"
 
