feat: set UID number start by env

--- a/sample.env
+++ b/sample.env
@@ -1,5 +1,6 @@
 LDAP_URI=ldaps://ldap.example.com/
 LDAP_DOMAIN=dc=example,dc=com
+UID_NUMBER_START=10000
 SECRET=SECRETKEY
 PASSWORD=admincn_password
 DEPLOY_DOMAIN=ldap-portal.example.com
