--- a/sample.env
+++ b/sample.env
@@ -1,6 +1,7 @@
 LDAP_URI=ldaps://ldap.example.com/
 LDAP_DOMAIN=dc=example,dc=com
-UID_NUMBER_START=10000
+UID_NUMBER_START=10001
+DEFALUT_GID_NUMBER=10001
 SECRET=SECRETKEY
 PASSWORD=admincn_password
 DEPLOY_DOMAIN=ldap-portal.example.com
