feat: limit page viewers to site administrators

--- a/sample.env
+++ b/sample.env
@@ -6,6 +6,7 @@ SECRET=SECRETKEY
 PASSWORD=admincn_password
 DEPLOY_DOMAIN=ldap-portal.example.com
 ADMIN_CN=admin
+ADMIN_GROUP=administrators
 EMAIL_DOMAIN=example.com
 NODE_ENV=development|test|production
 REDIS_URL=redis://redis
