--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,8 @@ services:
       - dev
       - prod
     image: redis/redis-stack:7.2.0-v4
+    ports:
+      - "127.0.0.1:6379:6379"
     volumes:
       - "redis-data:/data"
     networks:
