--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "jose": "^4.14.4",
+    "js-cookie": "^3.0.5",
     "ldapjs": "^3.0.2",
     "next": "13.4.7",
     "react": "18.2.0",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
     "@types/cookie": "^0.5.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/ldapjs": "^3.0.0",
     "@vitejs/plugin-react": "^4.0.1",
