--- a/sample.env
+++ b/sample.env
@@ -10,3 +10,5 @@ ADMIN_GROUP=administrators
 EMAIL_DOMAIN=example.com
 NODE_ENV=development|test|production
 REDIS_URL=redis://redis
+SLACK_SIGNING_SECRET=<your-signing-secret>
+SLACK_BOT_TOKEN=xoxb-<your-bot-token>
