feaot: post webhook message

--- a/sample.env
+++ b/sample.env
@@ -12,3 +12,4 @@ NODE_ENV=development|test|production
 REDIS_URL=redis://redis
 SLACK_SIGNING_SECRET=<your-signing-secret>
 SLACK_BOT_TOKEN=xoxb-<your-bot-token>
+SLACK_WEBHOOK_URL=https://hooks.slack.com/...
