--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@redis/json": "^1.0.4",
     "@slack/events-api": "^3.0.1",
     "@slack/interactive-messages": "^2.0.2",
+    "@slack/webhook": "^7.0.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
