--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
     ports:
       - "127.0.0.1:6379:6379"
     volumes:
-      - "redis-data:/data"
+      - "./data/redis:/data"
     networks:
       - redis
 
