--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
       - dev
       - prod
     image: redis/redis-stack:7.2.0-v4
-    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}
+    command: redis-stack-server --appendonly yes --requirepass ${REDIS_PASSWORD}
     ports:
       - "127.0.0.1:6379:6379"
     volumes:
