--- a/sample.ldap.env
+++ b/sample.ldap.env
@@ -1,6 +1,8 @@
+LDAP_SERVER_FQDN=ldap.jn.sfc.keio.ac.jp
+
 LDAP_ADMIN_PASSWORD=YourPassw0rd!
 LDAP_ORGANISATION=Example Company
-LDAP_DOMAIN=ldap.example.com
+LDAP_DOMAIN=example.com
 LDAP_BASE_DN=dc=example,dc=com
 LDAP_USERS_DN=ou=people,dc=example,dc=com
 LDAP_GROUPS_DN=ou=groups,dc=example,dc=com
